--- a/Pong/Pong.csproj
+++ b/Pong/Pong.csproj
@@ -43,21 +43,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Ball.cs" />
-    <Compile Include="Box.cs" />
-    <Compile Include="Entity.cs" />
-    <Compile Include="FastConsole.cs" />
-    <Compile Include="Game.cs" />
-    <Compile Include="Human.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="Game\Entities\Ball.cs" />
+    <Compile Include="Game\Entities\Box.cs" />
+    <Compile Include="Game\Entities\Entity.cs" />
+    <Compile Include="NativeConsole\FastConsole.cs" />
+    <Compile Include="NativeConsole\NativeMethods.cs" />
+    <Compile Include="Game\Game.cs" />
+    <Compile Include="Game\Entities\Human.cs" />
+    <Compile Include="Game\Entities\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Vector.cs" />
-    <Compile Include="VirtualKeys.cs" />
+    <Compile Include="Math\Vector.cs" />
+    <Compile Include="NativeConsole\VirtualKeys.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
