--- a/Pong/Pong.csproj
+++ b/Pong/Pong.csproj
@@ -53,7 +53,7 @@
     <Compile Include="Game\Entities\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Math\Vector.cs" />
+    <Compile Include="Math\Vector2.cs" />
     <Compile Include="NativeConsole\VirtualKeys.cs" />
   </ItemGroup>
   <ItemGroup>
